# ToDoList

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py
app/cli/: __init__.py  console.py
app/commands/: __init__.py  autoclose_overdue.py  scheduler.py
app/db/: __init__.py  base.py  session.py
app/exceptions/: __init__.py  base.py  repository_exceptions.py  service_exceptions.py
app/models/: __init__.py  project.py  task.py
app/repositories/: __init__.py  project_repository.py  task_repository.py
app/services/: __init__.py  project_service.py  task_service.py
migrations/: env.py
migrations/versions/: 0001_add_closed_at_to_tasks.py
todolist/: __main__.py  cron_autoclose.py  db.py  db_check.py  db_migrate.py
todolist/cli/: main.py
todolist/core/: config.py  exception.py  project.py  task.py
todolist/service/: __init__.py  project_service.py  task_service.py
todolist/storage/: in_memory.py  repository.py  sqlalchemy_storage.py
