[project]
name = "todolist"
version = "0.1.0"
description = ""
authors = [
    {name = "yasamin",email = "yasi.tahery83318331@gmail.com"}
]
readme = "README.md"
packages = [{include="todolist"}]


[tool.poetry.dependencies]
python = "^3.14"
python-dotenv = "^1.1.1"
SQLAlchemy = "^2.0.36"
psycopg2-binary = "^2.9.10"
schedule = "^1.2.0"
alembic = "^1.13.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
run-project = "todolist.__main__:main"

# Cron-like command for auto-closing overdue tasks
todolist-tasks-autoclose-overdue = "todolist.cron_autoclose:main"

# Helper command to run Alembic migrations from Python
todolist-db-upgrade = "todolist.db_migrate:main"
